[package]
name = "upload-jar"
version = "0.1.0"
authors = ["Gao Xiangkang <gxk_717@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
openssl = { version = "*", features = ["vendored"] }
ssh2 = "*"
toml = "*"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.19"